Version - 3.2.0 - 
-

Version - 3.1.9 - 02-15-19 (Not Released to CRAN)
-Updates to timePaleoPhy and cal3 documentation for dateTreatment argument, thanks to Armin Eisler for pointing out some inaccuracies in the text.
-Updated some (but not all) functions related to use of PBDB data to use the proper 1.2 API, and made sure usage was properly accounted for.
-Added functions for getting taxonomic data for clades, or for a specific list of taxa from the PBDB, which previously had existed in proto form in examples.
-Added a function for plotting a tree with phylopics from the PBDB - this function currently does not allow for a lot of flexibility and is a work in progress.

Version - 3.1.3 - 10-01-18
-Added function twoWayEcologyCluster for doing two-way R-mode & Q-mode cluster analyses of proportional abundance datasets from community ecology

Version - 3.1.1 - 07-05-18
-Fixed bug with createMrBayesTipDatingNexus to avoid 'morphNexus not found error' when a pre-existing NEXUS file is used but the morphological matrix doesn't need to be entirely reconstituted. Thanks to Struan Henderson for finding this bug.

Version - 3.1.0 - 07-02-18 (Released to CRAN)
-CRAN release
-Modified code checking for unique solutions in minCharChange on advice of Uwe Ligges, to avoid timing-out when tested on openBLAS systems

Version - 3.0.2 - 06-27-18 (Not Released to CRAN)
-Added new function nodeDates2branchLengths, so that node and tip ages can be used to obtain edge lengths, in absolute time, for undated trees, at suggestion of Struan Henderson
-Bumped version number, merged to master branch.

Version - 3.0.1 - 05-03-18 (Not Released to CRAN)
-Added Pete Wagner's functions relating to measuring character exhaustation, added Pete to the authors for paleotree.
-Added another cladogram (an MPT from a 13-taxon analysis) to SongZhangDicrano example dataset
-Added argument verboseWarnings to cal3 functions, modified previous 'warnings' (actually used function for messages) to warnings
