@@ -1,4 +1,5 @@
 Version - 3.2.0 - 
+-Replaced all instances of is.binary.tree with ape::is.binary.phylo
 -
 
 Version - 3.1.9 - 02-15-19 (Not Released to CRAN)
